# jpeg-on-steroids

./: .gitignore  jpeg.cabal
Haskell/: log_parse.hs
Haskell/jpeg-0.0.1/: .gitignore  main.hs
Haskell/jpeg-0.0.1/src/: main.hs
Haskell/jpeg-0.0.1/src/Graphics/: JPEG.hs
exec-src/: main.hs
src/: main.hs
src/Graphics/: DCT.hs  DCT_h.hs  JPG.hs  JPGDecoder.hs  statet.hs
src/Graphics/JPG/: Common.hs  DCT.hs  Decoder.hs  Env.hs  Huffman.hs  Image.hs  Parser.hs
tests/: test-jpeg.hs
