Name:                jpeg-on-steroids
Version:             0.0.1
Category:            Graphics
Description:         JPEG Decompression library (revisited)
License:             BSD3
License-file:        license.txt
Author:              Roman Sokolovskiy
Maintainer:          sokolovskiy.roman@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2
Synopsis:            A library for decoding JPEG files written in pure Haskell
                     (revisited version of older jpeg implementation)


Library
  Build-Depends:     base >= 3 && < 5, mtl
  Exposed-modules:   Graphics.JPG
  ghc-options:       -Wall
  hs-source-dirs:    src
